// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is disabled renders the page without the department fields 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is enabled renders the page with more than five linked organization units 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Which department are you applying to take leave from?
      </legend>
      <div
        class="usa-form-group"
      >
        <label
          class="usa-label text-bold font-heading-xs measure-5"
          for="Dropdown23"
          id="Dropdown23-label"
        >
          Select a department
        </label>
        <div
          class="usa-combo-box"
          data-default-value=""
          data-enhanced="true"
        >
          <select
            aria-hidden="true"
            class="usa-select maxw-mobile-lg usa-sr-only usa-combo-box__select"
            id=""
            name="combobox_organization_unit"
            tabindex="-1"
          >
            <option
              value=""
            />
            <option
              value="24a43b96-6fa7-4112-96b2-35e48901ef85"
            >
              Department Seven
            </option>
            <option
              value="choiceNotListed"
            >
              My department is not listed
            </option>
            <option
              value="choiceNotSure"
            >
              I'm not sure
            </option>
          </select>
          <input
            aria-autocomplete="list"
            aria-describedby="Dropdown23--assistiveHint"
            aria-expanded="false"
            aria-labelledby="Dropdown23_label Dropdown23_hint Dropdown23_error"
            aria-owns="Dropdown23--list"
            autocapitalize="off"
            autocomplete="off"
            class="usa-combo-box__input"
            id="Dropdown23"
            role="combobox"
            type="text"
          />
          <span
            class="usa-combo-box__clear-input__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Clear the select contents"
              class="usa-combo-box__clear-input"
              type="button"
            >
               
            </button>
            
      
          </span>
          <span
            class="usa-combo-box__input-button-separator"
          >
             
          </span>
          <span
            class="usa-combo-box__toggle-list__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Toggle the dropdown list"
              class="usa-combo-box__toggle-list"
              tabindex="-1"
              type="button"
            >
               
            </button>
            
      
          </span>
          <ul
            aria-labelledby="Dropdown23-label"
            class="usa-combo-box__list"
            hidden=""
            id="Dropdown23--list"
            role="listbox"
            tabindex="-1"
          >
            
      
          </ul>
          <div
            class="usa-combo-box__status usa-sr-only"
            role="status"
          />
          <span
            class="usa-sr-only"
            id="Dropdown23--assistiveHint"
          >
            
        When autocomplete results are available use up and down arrows to review and enter to select.
        Touch device users, explore by touch or with swipe gestures.
      
          </span>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is enabled renders the page with one linked organization unit 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Confirm your department
      </legend>
      <span
        class="display-block line-height-sans-5 measure-5 usa-intro"
      >
        Based on what you’ve entered, our records show you work at 
        <strong>
          Department One
        </strong>
        . Is this the department where you are applying to take leave?
      </span>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice1"
            name="radio_organization_unit"
            type="radio"
            value="69cc079c-6938-4bd1-8abf-32d0ae5ab54e"
          />
          <label
            class="usa-radio__label"
            for="InputChoice1"
          >
            Yes
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice2"
            name="radio_organization_unit"
            type="radio"
            value="choiceNo"
          />
          <label
            class="usa-radio__label"
            for="InputChoice2"
          >
            No
          </label>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="usa-fieldset margin-top-3"
    >
      <div
        class="usa-form-group"
      >
        <label
          class="usa-label text-bold font-heading-xs measure-5"
          for="Dropdown5"
          id="Dropdown5-label"
        >
          Select a department
        </label>
        <div
          class="usa-combo-box"
          data-default-value=""
          data-enhanced="true"
        >
          <select
            aria-hidden="true"
            class="usa-select maxw-mobile-lg usa-sr-only usa-combo-box__select"
            id=""
            name="combobox_organization_unit"
            tabindex="-1"
          >
            <option
              value=""
            />
            <option
              value="9a253769-add6-4db2-8e13-eda786c93887"
            >
              Department Two
            </option>
            <option
              value="choiceNotListed"
            >
              My department is not listed
            </option>
            <option
              value="choiceNotSure"
            >
              I'm not sure
            </option>
          </select>
          <input
            aria-autocomplete="list"
            aria-describedby="Dropdown5--assistiveHint"
            aria-expanded="false"
            aria-labelledby="Dropdown5_label Dropdown5_hint Dropdown5_error"
            aria-owns="Dropdown5--list"
            autocapitalize="off"
            autocomplete="off"
            class="usa-combo-box__input"
            id="Dropdown5"
            role="combobox"
            type="text"
          />
          <span
            class="usa-combo-box__clear-input__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Clear the select contents"
              class="usa-combo-box__clear-input"
              type="button"
            >
               
            </button>
            
      
          </span>
          <span
            class="usa-combo-box__input-button-separator"
          >
             
          </span>
          <span
            class="usa-combo-box__toggle-list__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Toggle the dropdown list"
              class="usa-combo-box__toggle-list"
              tabindex="-1"
              type="button"
            >
               
            </button>
            
      
          </span>
          <ul
            aria-labelledby="Dropdown5-label"
            class="usa-combo-box__list"
            hidden=""
            id="Dropdown5--list"
            role="listbox"
            tabindex="-1"
          >
            
      
          </ul>
          <div
            class="usa-combo-box__status usa-sr-only"
            role="status"
          />
          <span
            class="usa-sr-only"
            id="Dropdown5--assistiveHint"
          >
            
        When autocomplete results are available use up and down arrows to review and enter to select.
        Touch device users, explore by touch or with swipe gestures.
      
          </span>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;

exports[`DepartmentPage when claimantShowOrganizationUnits feature flag is enabled renders the page with two to five linked organization units 1`] = `
<div>
  <form
    class="usa-form"
    method="post"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
      tabindex="-1"
    >
      Employment information
    </h1>
    <fieldset
      class="usa-fieldset margin-top-3 usa-form-group"
    >
      <legend
        class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
      >
        Which department are you applying to take leave from?
      </legend>
      <div
        class="margin-top-3"
      >
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice9"
            name="radio_organization_unit"
            type="radio"
            value="14163dbf-ffd7-4556-9139-122d14cbedbb"
          />
          <label
            class="usa-radio__label"
            for="InputChoice9"
          >
            Department One
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice10"
            name="radio_organization_unit"
            type="radio"
            value="18fc61b0-2255-45d4-85f8-d0f1d3aed91a"
          />
          <label
            class="usa-radio__label"
            for="InputChoice10"
          >
            Department Two
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice11"
            name="radio_organization_unit"
            type="radio"
            value="choiceNotListed"
          />
          <label
            class="usa-radio__label"
            for="InputChoice11"
          >
            My department is not listed
          </label>
        </div>
        <div
          class="usa-radio measure-5 bg-transparent"
        >
          <input
            class="usa-radio__input"
            id="InputChoice12"
            name="radio_organization_unit"
            type="radio"
            value="choiceNotSure"
          />
          <label
            class="usa-radio__label"
            for="InputChoice12"
          >
            I'm not sure
          </label>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="usa-fieldset margin-top-3"
    >
      <div
        class="usa-form-group"
      >
        <label
          class="usa-label text-bold font-heading-xs measure-5"
          for="Dropdown17"
          id="Dropdown17-label"
        >
          Select a department
        </label>
        <div
          class="usa-combo-box"
          data-default-value=""
          data-enhanced="true"
        >
          <select
            aria-hidden="true"
            class="usa-select maxw-mobile-lg usa-sr-only usa-combo-box__select"
            id=""
            name="combobox_organization_unit"
            tabindex="-1"
          >
            <option
              value=""
            />
            <option
              value="d20f8612-5b61-4dfa-bbac-4f3fdc98c41f"
            >
              Department Three
            </option>
            <option
              value="a9ec77d6-b459-47ec-bb79-da6082687606"
            >
              Department Four
            </option>
            <option
              value="choiceNotListed"
            >
              My department is not listed
            </option>
            <option
              value="choiceNotSure"
            >
              I'm not sure
            </option>
          </select>
          <input
            aria-autocomplete="list"
            aria-describedby="Dropdown17--assistiveHint"
            aria-expanded="false"
            aria-labelledby="Dropdown17_label Dropdown17_hint Dropdown17_error"
            aria-owns="Dropdown17--list"
            autocapitalize="off"
            autocomplete="off"
            class="usa-combo-box__input"
            id="Dropdown17"
            role="combobox"
            type="text"
          />
          <span
            class="usa-combo-box__clear-input__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Clear the select contents"
              class="usa-combo-box__clear-input"
              type="button"
            >
               
            </button>
            
      
          </span>
          <span
            class="usa-combo-box__input-button-separator"
          >
             
          </span>
          <span
            class="usa-combo-box__toggle-list__wrapper"
            tabindex="-1"
          >
            
        
            <button
              aria-label="Toggle the dropdown list"
              class="usa-combo-box__toggle-list"
              tabindex="-1"
              type="button"
            >
               
            </button>
            
      
          </span>
          <ul
            aria-labelledby="Dropdown17-label"
            class="usa-combo-box__list"
            hidden=""
            id="Dropdown17--list"
            role="listbox"
            tabindex="-1"
          >
            
      
          </ul>
          <div
            class="usa-combo-box__status usa-sr-only"
            role="status"
          />
          <span
            class="usa-sr-only"
            id="Dropdown17--assistiveHint"
          >
            
        When autocomplete results are available use up and down arrows to review and enter to select.
        Touch device users, explore by touch or with swipe gestures.
      
          </span>
        </div>
      </div>
    </fieldset>
    <button
      class="usa-button position-relative margin-top-4"
      type="submit"
    >
      Save and continue
    </button>
  </form>
</div>
`;
